minikube/tempo/tempo-ingestion-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tempo-ingestion
  namespace: default
  annotations:
    kubernetes.io/ingress.class: dev-nginx
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 10M
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: dev-nginx
  rules:
  - host: tempo-ingest.example.com
    http:
      paths:
      - path: /v1/traces
        pathType: Prefix
        backend:
          service:
            name: tempo
            port:
              number: 4318
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tempo
            port:
              number: 4318
